[package]
name = "rocker"
version = "0.2.5"
authors = ["Maxim Molchanov <m.molchanov@vonmo.com>"]
license = "MIT/Apache-2.0"
edition = "2018"

[lib]
name = "rocker"
crate-type = ["dylib"]

[dependencies]
lazy_static = "1.4.0"
rustler = "0.26.0"
# rocksdb = { git = "https://github.com/Elzor/rust-rocksdb.git", branch = "stable_6.7.3" }

[dependencies.rocksdb]
# version = "0.19.0"
git = "https://github.com/seanhinde/rust-rocksdb.git"
branch = "remove-iterator-lifetimes"
default-features = false
features = ["lz4"]